--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,10 @@
 language: php
 php: 5.5
 
-install: bundle install
+install:
+  - bundle install
+  - npm install -g grunt-cli
+  - npm install
 
 script: bundle exec rake travis
 
