--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
   "homepage": "http://travi.github.io/patternlab-travi.org/",
   "devDependencies": {
     "grunt": "^0.4.5",
+    "grunt-bower-task": "^0.4.0",
     "grunt-contrib-sass": "^0.8.1",
+    "grunt-serve": "^0.1.6",
     "load-grunt-config": "^0.16.0"
   }
 }
