--- a/package.json
+++ b/package.json
@@ -13,8 +13,10 @@
   "devDependencies": {
     "grunt": "^0.4.5",
     "grunt-bower-task": "^0.4.0",
+    "grunt-contrib-connect": "^0.9.0",
     "grunt-contrib-sass": "^0.8.1",
-    "grunt-serve": "^0.1.6",
+    "grunt-contrib-watch": "^0.6.1",
+    "grunt-shell": "^1.1.2",
     "load-grunt-config": "^0.16.0"
   }
 }
