added a sass build task for the patternlab styles to enable sourcemaps

--- a/grunt/sass.yml
+++ b/grunt/sass.yml
@@ -1,7 +1,11 @@
-compile:
-    files:
-        - expand: true
-          cwd: source/css/scss/travi
-          src: '**/*.scss'
-          dest: source/css
-          ext: .css
+travi:
+  files:
+    - expand: true
+      cwd: source/css/scss/travi
+      src: '**/*.scss'
+      dest: source/css
+      ext: .css
+
+patternlab:
+  src: source/css/style.scss
+  dest: source/css/style.css
