added bower task to a couple of builds

--- a/grunt/watch.yml
+++ b/grunt/watch.yml
@@ -8,3 +8,10 @@ html:
   tasks: 'shell:patternlab'
   options:
     spawn: false
+
+bower:
+  files:
+    - bower_components/**
+  tasks: bower
+  options:
+    spawn: true
