removed some styles from the example that conflicted with my styles

--- a/grunt/watch.yml
+++ b/grunt/watch.yml
@@ -15,3 +15,10 @@ bower:
   tasks: bower
   options:
     spawn: true
+
+styles:
+  files:
+    - source/css/scss/**
+  tasks: sass
+  options:
+    spawn: true
