--- a/bower.json
+++ b/bower.json
@@ -20,6 +20,7 @@
   },
   "dependencies": {
     "travi-framework": "~0.10.0",
-    "travi-core": "master"
+    "travi-core": "master",
+    "travi.org-theme": "*"
   }
 }
