--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "grunt-contrib-connect": "^0.9.0",
     "grunt-contrib-sass": "^0.8.1",
     "grunt-contrib-watch": "^0.6.1",
+    "grunt-notify": "^0.4.1",
     "grunt-shell": "^1.1.2",
     "load-grunt-config": "^0.16.0"
   }
