--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "grunt": "^0.4.5",
     "grunt-bower-task": "^0.4.0",
     "grunt-contrib-connect": "^0.9.0",
+    "grunt-contrib-copy": "^0.8.0",
     "grunt-contrib-sass": "^0.8.1",
     "grunt-contrib-watch": "^0.6.1",
     "grunt-notify": "^0.4.1",
