--- a/package.json
+++ b/package.json
@@ -15,9 +15,9 @@
     "grunt-bower-task": "^0.4.0",
     "grunt-contrib-connect": "^0.9.0",
     "grunt-contrib-copy": "^0.8.0",
-    "grunt-contrib-sass": "^0.8.1",
     "grunt-contrib-watch": "^0.6.1",
     "grunt-notify": "^0.4.1",
+    "grunt-sass": "^0.18.1",
     "grunt-shell": "^1.1.2",
     "load-grunt-config": "^0.16.0"
   }
