further refined the files being watched

--- a/bower.json
+++ b/bower.json
@@ -26,6 +26,15 @@
     "amplify": {
       ".": "core/amplify.core.js"
     },
+    "jquery-requestAnimationFrame": {
+      ".": "src/jquery.requestAnimationFrame.js"
+    },
+    "jquery.validation": {
+      ".": "jquery.validate.js"
+    },
+    "jsrender": {
+      ".": "*.js"
+    },
     "wymeditor": {
       ".": "dist/wymeditor"
     }
