--- a/grunt/watch.yml
+++ b/grunt/watch.yml
@@ -3,14 +3,19 @@ html:
     - '<%= paths.dest.patterns %>/**/*.{mustache,json}'
     - '<%= paths.dest.css %>/**/*.css'
     - '<%= paths.dest.js %>/**/*.js'
-    - '<%= paths.dest.bower %>/**/*.{css,js,jpg,png}'
+    - '<%= paths.dest.bower %>/travi*/**/*.{css,js,jpg,png}'
+    - '!<%= paths.dest.bower %>/travi*/bower_components/**/*.{css,js,jpg,png}'
+    - '!<%= paths.dest.bower %>/travi*/node_modules/**/*.{css,js,jpg,png}'
     - 'source/api/*.json'
   tasks:
     - shell:patternlab
     - notify:patternlab
 
 bower:
-  files: '<%= paths.src.bower %>/travi*/**/*.{scss,css,js}'
+  files:
+    - '<%= paths.src.bower %>/travi*/**/*.{scss,css,js}'
+    - '!<%= paths.src.bower %>/travi*/bower_components/**/*'
+    - '!<%= paths.src.bower %>/travi*/node_modules/**/*'
   tasks:
     - bower
     - notify:bower
