--- a/config/config.ini
+++ b/config/config.ini
@@ -9,7 +9,7 @@ v  = "0.7.12"
 ie = "DS_Store,less"
 
 // directories and files to ignore when building or watching the source dir, separate with a comma
-id = ".svn,.sass-cache"
+id = ".svn,.sass-cache,node_modules,bower_components"
 
 // choose if these services should be loaded in the nav and their ports
 autoReloadNav  = "false"
