--- a/grunt/aliases.yml
+++ b/grunt/aliases.yml
@@ -1,3 +1,7 @@
+dependencies:
+  - bower
+  - notify:bower
+
 serve:
   - build
   - connect
@@ -6,7 +10,7 @@ serve:
 build:
   - clean
   - copy:patternlab
-  - bower
+  - dependencies
   - copy:favicon
   - sass
   - shell:patternlab
