--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "grunt-contrib-connect": "^0.9.0",
     "grunt-contrib-copy": "^0.8.0",
     "grunt-contrib-watch": "^0.6.1",
+    "grunt-newer": "^1.1.0",
     "grunt-notify": "^0.4.1",
     "grunt-sass": "^0.18.1",
     "grunt-shell": "^1.1.2",
