programatically generated the fonts example to close #9

--- a/grunt/pattern_lab_component_builder.yml
+++ b/grunt/pattern_lab_component_builder.yml
@@ -9,3 +9,9 @@ greys:
     regex: "^\\$grey-.*"
   src: bower_components/travi.org-theme/scss/_colors.scss
   dest: source/_patterns/00-atoms/01-global/00-greys.json
+
+fonts:
+  options:
+    regex: "^\\$font-.*"
+  src: bower_components/travi.org-theme/scss/typography/_variables.scss
+  dest: source/_patterns/00-atoms/01-global/01-fonts.json
