removed the dash in the pattern that was preventing normal grey from being listed

--- a/grunt/pattern_lab_component_builder.yml
+++ b/grunt/pattern_lab_component_builder.yml
@@ -6,7 +6,7 @@ theme-colors:
 
 greys:
   options:
-    regex: "^\\$grey-.*"
+    regex: "^\\$grey.*"
   src: bower_components/travi.org-theme/scss/_colors.scss
   dest: source/_patterns/00-atoms/01-global/00-greys.json
 
